css fixes. field responsible engineer in edit wp had wrong size.

--- a/src/main/webapp/resources/css/template.css
+++ b/src/main/webapp/resources/css/template.css
@@ -131,6 +131,9 @@ p {
 .paddingZero {
 	padding: 0;
 }
+.paddingHalf {
+	padding: 0.5em;
+}
 .error {
 	color: red;
 }
